# microservices_lab

./: README.md  docker-compose.yml
nginx/: default.conf.template
rest_service/: Dockerfile  pyproject.toml
rest_service/src/: __main__.py
rest_service/src/api/: __init__.py  router.py
rest_service/src/api/v1/: __init__.py  contact.py  group.py  router.py
rest_service/src/schemas/: __init__.py  contact.py  group.py  phone.py
